# qristal-core

./: .gitignore  .gitlab-ci.yml  .qristal-core-ci-images.yml  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  relocate.sh  remote_backends.yaml  vimrc
examples/: CMakeLists.txt  README.md  async_example_1.py  async_example_2.py  aws_noise_demo.py  topology.py
examples/CLI_executable/: README.md  qbsdkcli.cpp
examples/aer_simulator/: aer_mps_dj_large.py  aer_mps_simple.py
examples/amplitude_amplification/: amp_amplification.py  amp_amplification_iteration.py  amplitude_amplification.py
examples/amplitude_estimation/: MLQAE_parameter_scaling.py  ML_amplitude_estimation.py  ML_amplitude_estimation_parameter_testing.py  canonical_amplitude_estimation.py  canonical_amplitude_estimation_oracle.py  methods_comparison.py
examples/aws_braket/: QBCIRCUIT.inc  test.py  verbatim.py
examples/basic_examples/: amcu.py  amplitude_estimation_adder.py  comparator.py  compare_beam_oracle.py  compare_gt.py  controlled_addition.py  controlled_subtraction.py  controlled_swap.py  cpfd.py  efficient_encoding.py  equality_checker.py  generalised_mcx.py  mcx.py  multiplication.py  pfd.py  qft.py  qpe.py  set_circuit.py  set_circuits.py  subtraction.py
examples/cirq_noise_model/: qsim_noisy.py
examples/deutsch-jozsa-qbos-proceedings/: alg_classic-36.ipynb
examples/exponential_search/: exponential_search.py  exponential_search_aer.py  exponential_search_function.py  exponential_search_keywords.py
examples/lambda_accelerator/: run_async.py  run_lambda.py  run_lambda_random_circuit.py
examples/noise_mitigation/: noise_mitigation.py
examples/python/: amcu.py  async_example_1.py  async_example_2.py  aws_braket_qft.py  bell_with_SPAM.py  circuit_append.py  comparator.py  compare_beam_oracle.py  compare_gt.py  controlled_addition.py  controlled_subtraction.py  controlled_swap.py  cpfd.py  cudaq_qft.py  demo1.py  dj_large.py  efficient_encoding.py  equality_checker.py  exponential_search.py  generalised_mcx.py  mcx.py  multiplication.py  noise_aware_placement.py  noise_aware_placement_aws_rigetti.py  noise_aware_placement_noise_model.py  noise_mitigation.py  noise_model.py  noise_model_custom_channel.py  noise_model_custom_channel_qb_gateset.py  noise_model_custom_kraus.py  noise_model_custom_parameterized.py  noise_model_user_defined.py  parametrization_demo.py  pfd.py  qaoa_API_demo.py  qaoa_example.py  qaoa_example_1.py  qb_mpdo_noisy.py  qb_mps_noisy.py  qb_purification_noisy.py  (+19 more)
examples/q_chemistry/: vqe_calculator.py
examples/qaoa/: Makefile  qaoa_example.cpp
examples/qap/: QAP_Ising.ipynb  QAP_QUBO_Ising.ipynb
examples/qbos_core_executable/: README.md  qbos_core.cpp
examples/tket_aws_rigetti_placement/: rigetti_placement_qft.py  rigetti_placement_simple.py
examples/utility_visual/: __init__.py
examples/vq_circuits/: dataFormat.py  nb_vqc_simple.ipynb  script_vqc_simple.py  subjectJoins.py
examples/vqe/: Automatic_Pauli_string_generation.ipynb  H2_STO-3G_1qubit.ipynb  Li2_STO-3G_2qubit.ipynb  LiH_STO-3G_2qubit.ipynb  h2_vqe_aswap.py  h2_vqe_uccsd.py  h4_vqe_uccsd.py  h4_vqe_uccsd_aer.py  h6_vqe_uccsd_aer.py
examples/vqee/: Makefile  vqee_example.cpp
tests/: CMakeLists.txt  QuantumBrillianceAcceleratorTester.cpp  backendTester.cpp  coreCLITester.cpp  exponent_call.py  exponent_tests.py  exponential_search_tests.py  jensen_shannon.cpp  qpu_config.json  sessionTester.cpp  session_if_model.py  test_aws_braket_hosted.py  test_aws_braket_local.py  test_cases.cpp  test_cases.py  test_noise_models.py  test_openqasm.qasm  transpilationTester.cpp
tests/advice/: QPrimeTester.cpp  UPrimeTester.cpp  UQPrimeTester.cpp  WPrimeTester.cpp
tests/aws_braket/: AWSAcceleratorTester.cpp  AWSBraketHostedTester.cpp  AwsOpenQasm3Tester.cpp  CMakeLists.txt  test_aws_braket_hosted.py  test_aws_braket_local.py
tests/circuit_builders/: CMakeLists.txt  ExponentBuilderTester.cpp  ParametrizedCircuitTester.cpp  RyEncodingTester.cpp
tests/circuits/: AEtoMetricCircuitTester.cpp  AmplitudeAmplificationTester.cpp  CMakeLists.txt  CUTester.cpp  CanonicalAmplitudeEstimationCircuitTester.cpp  ComparatorCircuitTester.cpp  CompareBeamOracleCircuitTester.cpp  CompareBeamOracleGeneralCircuitTester.cpp  CompareGTCircuitTester.cpp  ControlledAdditionCircuitTester.cpp  ControlledMultiplicationCircuitTester.cpp  ControlledPFDCircuitTester.cpp  ControlledQAETester.cpp  ControlledSubtractionCircuitTester.cpp  ControlledSwapCircuitTester.cpp  DecoderKernelCircuitTester.cpp  EfficientEncodingCircuitTester.cpp  EqualityCheckerCircuitTester.cpp  GeneralisedMCXCircuitTester.cpp  InitRepeatFlagTester.cpp  InverseCircuitCircuitTester.cpp  MeanValueFinderCircuitTester.cpp  MultiControlledUWithAncillaCircuitTester.cpp  MultiplicationCircuitTester.cpp  PFDCircuitTester.cpp  PhaseEstimationCircuitTester.cpp  PseudoTraceAmplitudeEstimationCircuitTester.cpp  QDBeamStatePrepCircuitTester.cpp  QPrimeTester.cpp  SubtractionCircuitTester.cpp  SuperpositionAdderCircuitTester.cpp  UPrimeTester.cpp  UQPrimeTester.cpp  WPrimeTester.cpp
tests/cudaq/: CudaqTester.cpp
tests/lambda/: CMakeLists.txt  QBLambdaTester.cpp  fake_aer_server.py.in
tests/misc_cpp/: XaccInitialisedTests.cpp  backendTester.cpp  coreCLITester.cpp  error_mitigation.cpp  gateDeferralTester.cpp  jensen_shannon.cpp  sessionTester.cpp  transpilationTester.cpp
tests/misc_py/: exponent_call.py  exponent_tests.py  exponential_search_tests.py  q_chemistry_test_cases.py  test_cases.py  test_noise_models.py
tests/mpi/: SerialisationTester.cpp  SessionConfigurationTester.cpp  ShotParallelisationTester.cpp
tests/noise_model/: EmulatorNoiseModelTester.cpp  NoiseModelTester.cpp
tests/optimization/: qaoaTester.cpp  qmlTester.cpp  vqeeTester.cpp
tests/placement/: tketTester.cpp
tests/python_module/: aer_thread_test.py  benchmark_test.py  benchmark_tests.py  circuit_optimization_test.py  circuit_test.py  circuit_test_cases.py  cudaq_integration.py  error_mitigation_test.py  execution_test.py  execution_test_cases.py  hw_mock_test.py  hw_mock_test_cases.py  (+10 more)
(+758 files in other folders)
